feat(app): add user routes and then some
